# ministry-backend

./: .gitignore  .ruff.toml  apografi_check_extended_organizations.py  apografi_sync.py  apografi_sync_dictionaries.py  apografi_sync_organizational_units.py  apografi_sync_organizations.py  cofog.py  count.py  count_distinct.py  deploy.sh  psped_foreis_update_tree.py  psped_sync_foreis.py  psped_sync_monades.py  pyproject.toml  refresh_cache.py  requirements.txt  test.py  update_user_accesses.py
src/: __init__.py
src/apografi/: check_extended_reprs.py  constants.py  lib.py  sync_dictionaries.py  sync_organizational_units.py  sync_organizations.py  utils.py
src/blueprints/: apografi-mayby-irrelevant.py  apografi.py  armodiotites.py  auth.py  cofog.py  decorators.py  diataxeis.py  legal_act.py  legal_acts.py  legal_provision.py  legal_provisions.py  legalact.py  log.py  nomikes_praxeis.py  psped.py  remit.py  remits.py  stats.py  upload.py  user.py  utils.py
src/models/: apografi.py  cofog.py  foreas.py  psped.py  upload.py  user.py  utils.py
src/models/apografi/: dictionary.py  embedded.py  organization.py  organizational_unit.py
src/models/psped/: change.py  diataxi.py  foreas.py  legal_act.py  legal_provision.py  log.py  monada.py  nomiki_praxi.py  remit.py
src/psped/: organization_tree.py
src/static/: swagger.json  tags.json
src/static/apografi/: dictionary_dictionary.json  dictionary_dictionary_description_id.json  dictionary_dictionary_id_description.json  dictionary_dictionary_ids.json  organization_code.json  organization_code_units.json  (+5 more)
(+4 files in other folders)
