[tool.poetry]
name = "ministry-backend"
version = "0.1.0"
description = ""
authors = ["tsak1998 <tsakalis.pantelis@gmail.com>"]
readme = "README.md"
packages = [{include = "ministry_backend"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
